# xcc-posix

./: CMakeLists.txt  README.md
config/: xcc-posix-config.cmake.in  xcc-posix.pc.in
include/xcc-posix/: application.h  base64.h  cond.h  endian.h  filesystem.h  header.h  json.h  library.h  locale.h  log.h  memory.h  mmap.h  mutex.h  pipe.h  process.h  semaphore.h  socket.h  stream.h  string.h  system.h  thread.h  time.h  xcc.h
include/xcc-posix/sys/: compiler.h  macro.h  platform.h  types.h
source/: application.c  base64.c  cond.c  dllmain.c  endian.c  filesystem.c  json.c  library.c  locale.c  log.c  memory.c  mmap.c  mutex.c  pipe.c  process.c  semaphore.c  socket.c  stream.c  string.c  system.c  thread.c  time.c
source/os/: ntdll.c  ntdll.h
